===============
VERSION HISTORY
===============

Version 2.1.0
=================================
-Emails and SMS messages are now multithreaded within a single VizAlert (Issue #76)
-Updated to support the latest Twilio library (Issue #107)
-Fixed issue with VizAlertsDemo SMS tests (Issue #105)
=================================

Version 2.0.1
=================================
-Fixed issue where unlicensed users subscribed to Simple Alerts generate failure emails (Issue #88)
-Fixed issue where VIZ_LINK content reference doesn't work if placed after other content references (Issue #83)
-Improved error handling when subscriber to an Advanced Alert is not the owner (Issue #82)
-Fixed issue where trailing commas in recipients lists cause a "missing field" error (Issue #61)
-Fixed issue where locales defaulting to semicolon delimiters cannot use Advanced Alerts (Issue #17)
-Added a few small notes to the VizAlertsConfig workbook (Issues #87,  #94)
-Install guide clarifications and corrections (Issues #86, #85, #84)
-User Guide clarifications and corrections (Issue #77)
-Allow use of additional characters to break up list of recipient email addresses (Issue #92)
-Added error handling for invalid regex expressions in configuration viz (Issue #90)
-Fixed issue where Case should be ignored in email address regex pattern comparisons (Issue #93)
=================================

Version 2.0.0
=================================
-Added support for SMS messages through Twilio (Issue #57)
-Added multi-threading to improve alert timeliness (Issue #7)
-Configuration settings are now primarily derived from a Tableau Server view rather than config/vizalerts.yaml (Issue #41)
-Field naming convention is now more flexible (Issue #12)
-Fixed defect where SSL certificate was not being validated
-Added config options around SSL certificate validation
-Improved error handling
-Improved alert test timeliness
-Restructured code for more modularity and for future features