@@ -4,9 +4,12 @@ VERSION HISTORY
 
 Version 2.1.0
 =================================
+-Implemented "smart default" behavior for Advanced Alerts (Issue #68)
+-Added custom scheduling to trigger alerts based on when the workbook extract refreshes (Issue #97)
 -Emails and SMS messages are now multithreaded within a single VizAlert (Issue #76)
 -Updated to support the latest Twilio library (Issue #107)
 -Fixed issue with VizAlertsDemo SMS tests (Issue #105)
+-Moved documentation from .docx format to Markdown (Issue #79)
 =================================
 
 Version 2.0.1
